assets/css/blog.css
/* ... */
.one-tag-list .tag-text {
  font-weight: 200;
  /* Hux learn from
     *     TypeIsBeautiful,
     *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
     */
  font-family: -apple-system, "Helvetica Neue", "Arial", "PingFang SC", "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif;
  line-height: 1.7;
}
.one-tag-list .post-preview {
  position: relative;
}
.one-tag-list .post-preview > a .post-title {
  font-size: 16px;
  font-weight: 500;
  margin-top: 20px;
}
.one-tag-list .post-preview > a .post-subtitle {
  font-size: 12px;
}
.one-tag-list .post-preview > .post-meta {
  position: absolute;
  right: 5px;
  bottom: 0px;
  margin: 0px;
  font-size: 12px;
  line-height: 12px;
}
@media only screen and (min-width: 768px) {
  .one-tag-list .post-preview {
    margin-left: 20px;
  }
  .one-tag-list .post-preview > a > .post-title {
    font-size: 18px;
    line-height: 1.3;
  }
  .one-tag-list .post-preview > a > .post-subtitle {
    font-size: 14px;
  }
  .one-tag-list .post-preview .post-meta {
    font-size: 14px;
  }
}
/* Tags support End*/
/* Archives */
.archives-list .tag-text {
  font-weight: 200;
  /* Hux learn from
     *     TypeIsBeautiful,
     *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
     */
  font-family: -apple-system, "Helvetica Neue", "Arial", "PingFang SC", "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif;
  line-height: 1.7;
}
.archives-list .post-preview {
  position: relative;
}
.archives-list .post-preview > a .post-title {
  font-size: 14px;
  font-weight: 500;
  margin-top: 10px;
}
.archives-list .post-preview > .post-meta {
  position: absolute;
  right: 5px;
  bottom: 0px;
  margin: 0px;
  font-size: 12px;
  line-height: 12px;
}
@media only screen and (min-width: 768px) {
  .archives-list .post-preview {
    margin-left: 20px;
  }
  .archives-list .post-preview > a > .post-title {
    font-size: 14px;
    line-height: 1.3;
  }
  .archives-list .post-preview .post-meta {
    font-size: 14px;
  }
}
.archives-list hr {
  margin-top: 5px;
  margin-bottom: 5px;
  border: 0;
  border-top: 1px solid #eee;
}
/* Archives End*/
/* Hux make all image responsible in post-container */
.post-container img {
  display: block;
  max-width: 100%;
  height: auto;
  margin: 1.5em auto 1.6em auto;
}
/* Hux Optimize UserExperience */
.navbar-default .navbar-toggle:focus,
.navbar-default .navbar-toggle:hover {
  background-color: inherit;
}
.navbar-default .navbar-toggle:active {
  background-color: rgba(255, 255, 255, 0.25);
}
/* Hux customize Style for navBar button */
.navbar-default .navbar-toggle {
  border-color: transparent;
  padding: 19px 16px;
  margin-top: 2px;
  margin-right: 2px;
  margin-bottom: 2px;
  border-radius: 50%;
}
.navbar-default .navbar-toggle .icon-bar {
  width: 18px;
  border-radius: 0px;
  background-color: white;
}
.navbar-default .navbar-toggle .icon-bar + .icon-bar {
  margin-top: 3px;
}
/* Hux customize Style for Duoshuo */
.comment {
  margin-top: 20px;
}
.comment #ds-thread #ds-reset a.ds-like-thread-button {
  border: 1px solid #ddd;
  border-radius: 0px;
  background: white;
  box-shadow: none;
  text-shadow: none;
}
.comment #ds-thread #ds-reset li.ds-tab a.ds-current {
  border: 1px solid #ddd;
  border-radius: 0px;
  background: white;
  box-shadow: none;
  text-shadow: none;
}
.comment #ds-thread #ds-reset .ds-textarea-wrapper {
  background: none;
}
.comment #ds-thread #ds-reset .ds-gradient-bg {
  background: none;
}
#ds-smilies-tooltip ul.ds-smilies-tabs li a {
  background: white !important;
}
.page-fullscreen .intro-header {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}
.page-fullscreen #tag-heading {
  position: fixed;
  left: 0;
  top: 0;
  padding-bottom: 150px;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-box-pack: center;
  -webkit-box-align: center;
  display: -webkit-flex;
  -webkit-align-items: center;
  -webkit-justify-content: center;
  -webkit-flex-direction: column;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.page-fullscreen footer {
  position: absolute;
  width: 100%;
  bottom: 0;
  padding-bottom: 20px;
  opacity: 0.6;
  color: #fff;
}
.page-fullscreen footer .copyright {
  color: #fff;
}
.page-fullscreen footer .copyright a {
  color: #fff;
}
.page-fullscreen footer .copyright a:hover {
  color: #ddd;
}

/* ========== Homepage Layout Overrides ========== */
/* Full-width content on homepage, hide sidebar */
.container:has(.home-banner) {
  width: 100% !important;
  max-width: 100% !important;
  padding-left: 0 !important;
  padding-right: 0 !important;
  margin-left: 0 !important;
  margin-right: 0 !important;
}

.row:has(.post-container .home-banner) {
  margin-left: 0 !important;
  margin-right: 0 !important;
}

.post-container:has(.home-banner) {
  width: 100% !important;
  flex: 0 0 100% !important;
  max-width: 100% !important;
  padding-left: 0 !important;
  padding-right: 0 !important;
  margin-left: 0 !important;
}

.row:has(.post-container .home-banner) .sidebar-container {
  display: none !important;
}

/* ========== Detail Page Layout Overrides ========== */
.post-container:not(.post-container:has(.home-banner)) {
  margin-left: 0 !important;
  padding-left: 15px !important;
  margin-top: 0.75rem;
}

.post-container:not(.post-container:has(.home-banner)) .post-title {
  color: #1a1a1a !important;
}

.post-container:not(.post-container:has(.home-banner)) .post-preview,
.post-container:not(.post-container:has(.home-banner)) .post-content {
  color: #525252 !important;
}
/* ... */

